--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/cloudflare": "^9.0.2",
     "@astrojs/mdx": "^2.0.4",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.5.2",
     "@tailwindcss/typography": "^0.5.10",
     "@vercel/analytics": "^1.2.2",
     "astro": "^4.4.4",
